# gpu-vram-orchestrator

./: .env.example  .flake8  .gitignore  API.md  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  LICENSE  OPTIONAL_ENHANCEMENTS_SUMMARY.md  PERFORMANCE_TUNING.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TESTING_GUIDE.md  TIER1_CRITICAL_REVIEW.md  TIER1_FIXES_TEMPLATES.md  TIER1_QUICK_START.md  TROUBLESHOOTING.md  WEEK1_FIXES.md  WEEK2_IMPLEMENTATION.md  WEEK2_SUMMARY.md  WEEK3_DEPLOYMENT.md  commit_debug.ps1  docker-compose.yml  fix_dates.ps1  pyproject.toml  requirements.txt  test_results.txt  verify_critical_fixes.py
.github/workflows/: tests.yml
backend/: Dockerfile  pytest.ini  requirements.txt
backend/src/: __init__.py  app.py  config.py  registry.py  security.py
backend/src/cache/: __init__.py  gpu_cache.py
backend/src/client/: api_client.py
backend/src/gpu/: __init__.py  detector.py  memory_manager.py
backend/src/inference/: __init__.py  engine.py
backend/src/monitoring/: benchmarks.py  metrics.py
backend/src/predictor/: __init__.py  access_predictor.py  model_access_predictor.py  model_preloader.py  preloader.py
backend/src/scheduler/: __init__.py  gpu_scheduler.py
backend/tests/: __init__.py  conftest.py  load_test.py  test_api.py  test_gpu_cache.py  test_gpu_detection.py  test_inference_engine.py  test_integration.py  test_memory_manager.py  test_model_registry.py  test_monitoring.py  test_predictor.py  test_scheduler.py
benchmarks/real_gpu_run/: T4_benchmark.md
examples/: basic_inference.py  batch_processing.py  model_management.py  monitoring_queries.py
helm/gpu-vram-orchestrator/: Chart.yaml  values.yaml
helm/gpu-vram-orchestrator/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
kubernetes/: configmap.yaml  deployment.yaml  pvc.yaml  secrets.yaml  service.yaml
load_tests/: inference_load_test.js  locustfile.py  spike_test.js
monitoring/: alertmanager.yml  grafana_dashboard.json  grafana_datasource.yml  prometheus.yml  prometheus_alerts.yml
